# switch-hosts-rs

./: .editorconfig  Cargo.toml  LICENSE  README.md  build-release.sh
.github/workflows/: ci.yml
release/: switchhosts-rs
src/: app.rs  common.rs  data.rs  editor.rs  filter.rs  filter_result.rs  hosts.rs  hosts_title_input.rs  list.rs  log.rs  main.rs  message.rs  observer.rs  password_input.rs  popup.rs  search.rs  search_result.rs  single_line_textarea.rs  state.rs  tip.rs  title_dialog.rs  title_input.rs  util.rs
src/logger/: debug_log.rs  log.rs  mod.rs
