[package]
name = "switchhosts-rs"
version = "0.1.0"
authors = ["nieyuyao"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
color-eyre = "0.6.5"
tui-textarea = "0.7.0"
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version =  "1.17.0", features = [ "v4" ]}
log = "0.4.27"
log4rs = "1.3.0"
